added more pages and binding context for main vm

--- a/ListViewScrollIssue/ListViewScrollIssue.csproj
+++ b/ListViewScrollIssue/ListViewScrollIssue.csproj
@@ -69,6 +69,12 @@
 	  <MauiXaml Update="Views\Page2.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\Page3.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Page4.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
